--- a/src/breakpoint.css
+++ b/src/breakpoint.css
@@ -162,18 +162,18 @@ box-shadow: 0px 0px 0px 1px rgba(219,237,249,1);
   }
 
   .puntos__lista li .circle-icon {
+    width: 16px;
+    opacity: 0;
     position: relative;
     z-index: 2;
-    font-size: 16px;
     padding-top: 0.3rem;
-    color: var(--neutral-100);
     transition: all 0.4s ease-in-out;
   }
 
   .flechas__lista li .arrow-icon {
     position: relative;
     z-index: 2;
-    font-size: 24px;
+    font-size: 36px;
     margin-top: 1rem;
     left: 1rem;
     color: white;
@@ -181,7 +181,9 @@ box-shadow: 0px 0px 0px 1px rgba(219,237,249,1);
   }
 
   .puntos__lista li .active.circle-icon {
-    color: var(--secondary-400);
+    width: 16px;
+    opacity: 1;
+    position: absolute;
     transition: all 0.4s ease-in-out;
   }
 
