--- a/src/layout.css
+++ b/src/layout.css
@@ -56,12 +56,13 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 ;
   padding: 0;
 }
 
-html {
+.soluciones__container, .soluciones__accordeon {
   font-size: 62.5%;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
@@ -70,10 +71,6 @@ a {
 
 ul {
   list-style: none;
-}
-
-.soluciones-widget {
-  font-family: "Montserrat", sans-serif;
 }
 
 /* sección de soluciones */
@@ -284,7 +281,7 @@ span.title-tag {
     height: auto;
     background-color: white;
     border: var(--card-borders);
-    border-radius: var(--card-border-radius-3);
+    border-radius: 20px;
     box-shadow: var(--card-shadow);
     padding: 4rem 3rem;
     position: relative;
